5. SSL-Local-Inggress/1. IngressSSL_Clock.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: clocks-ingress
    annotations:
        cert-manager.io/cluster-issuer: selfsigned-issuer
        # optional allow max file upload size 100M
        nginx.ingress.kubernetes.io/client-body-buffer-size: 100M
        nginx.ingress.kubernetes.io/proxy-body-size: 100M
spec:
    rules:
        - host: clocks.adaptive.local
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: clock-service
                        servicePort: 80
    tls:
        - hosts:
              - clock.adaptive.local
          secretName: clock-local-cert-tls
