5. SSL-Local-Inggress/3. IngressSSL_Calculator.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: calculators-ingress
    annotations:
        cert-manager.io/cluster-issuer: selfsigned-issuer
        # optional allow max file upload size 100M
        nginx.ingress.kubernetes.io/client-body-buffer-size: 100M
        nginx.ingress.kubernetes.io/proxy-body-size: 100M
spec:
    rules:
        - host: calculators.adaptive.local
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: calculator-service
                        servicePort: 80
    tls:
        - hosts:
              - calculators.adaptive.local
          secretName: calculators-local-cert-tls
